Start work on evaluating the semantic index against CodeSearchNet
Co-authored-by: Jason <jason@zed.dev>

--- a/crates/semantic_index/Cargo.toml
+++ b/crates/semantic_index/Cargo.toml
@@ -17,7 +17,21 @@ name = "index"
 path = "examples/index.rs"
 crate-type = ["bin"]
 
+[[bin]]
+name = "eval"
+path = "src/bin/eval.rs"
+
 [dependencies]
+
+indicatif = "0.17"
+
+clap.workspace = true
+tokio.workspace = true
+
+reqwest = { version = "0.11", features = ["json"] }
+zip = "0.6"
+
+async-compression.workspace = true
 anyhow.workspace = true
 client.workspace = true
 clock.workspace = true
