--- a/crates/evals/Cargo.toml
+++ b/crates/evals/Cargo.toml
@@ -27,6 +27,7 @@ futures-batch.workspace = true
 git.workspace = true
 gpui.workspace = true
 language.workspace = true
+languages.workspace = true
 log.workspace = true
 heed.workspace = true
 http_client.workspace = true
